
	* Documentation/user/putting.itely: new chapter; placeholder
	for future expansion.

	* Documentation/user/examples.itely: moved "suggestions for
	writing LP files" section into putting.itely.

	* Documentation/user/lilypond.itely: added new chapter,
	fixed the short table of contents.

2005-05-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (write-preamble): extract CFF from OTF
	fonts directly.

	* buildscripts/gen-emmentaler-scripts.py (i): idem.

	* mf/GNUmakefile: remove all CFF rules.

	* scm/framework-ps.scm (ps-embed-cff): reinstate.

	* lily/open-type-font-scheme.cc (LY_DEFINE):
	new function ly:otf-font-table-data.
	(LY_DEFINE): new function otf-font?

2005-05-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(outdir)/lilypond.map): remove rule.
	($(outdir)/Fontmap.lily): idem.

	* buildscripts/gen-emmentaler-scripts.py (i): load fetaXX encoding
	for PFAEmmentaler-XXX.pfa. This fixes ghostscript ps2pdf problems.

	* Documentation/user/music-glossary.tely (accidental): NL
	translation of accidental.

2005-05-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/international.hh: Bugfix: include "string.hh".

	* lily/include/mingw-compatibility.hh: New file.

	* flower/include/libc-extension.hh (memrev): Rename from strrev.

	* configure.in: Search for mingw wcrtomb library.

2005-05-02  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/convert-ly.py: Bug fix

	* Documentation/user/changing-defaults.itely (Common tweaks):
	Added example where the context has to be specified explicitly
	(MetronomeMark). 

2005-05-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (ly_options): set timing to #f for
	notime option.

	* scripts/convert-ly.py (conv): typo.

	* flower/*.cc: remove <? and >?
	
	* lily/*.cc: remove <? and >?

	* lily/tweak-registration.cc (insert_tweak_from_file): Make sure
	that 0x0 isn't passed into scm_cons(). Fixes crash with tweak
	editor.
