@@ -62,7 +62,6 @@
 ;;(write (ly:all-output-backend-commands))
 ;;(write (ly:all-stencil-expressions))
 
-
 ;;; helper functions, not part of output interface
 (define (escape-parentheses s)
   (regexp-substitute/global #f "(^|[^\\])([\\(\\)])" s 'pre 1 "\\" 2 'post))
